// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PoolCard Snapshots renders default state correctly 1`] = `
<View
  accessibilityLabel="Pool Stellar Growth Pool with balance $1,234,567"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#F9FAFB",
      "borderColor": "#E5E7EB",
      "borderRadius": 12,
      "borderWidth": 1,
      "marginVertical": 4,
      "opacity": 1,
      "padding": 20,
    }
  }
  testID="pool-card-pool-456"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#111827",
          "flex": 1,
          "fontSize": 18,
          "fontWeight": "bold",
        }
      }
    >
      Stellar Growth Pool
    </Text>
    <Text
      style={
        {
          "borderRadius": 6,
          "color": "#10B981",
          "fontSize": 14,
          "fontWeight": "600",
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      12.5%
       APY
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#6B7280",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 16,
      }
    }
  >
    A diversified pool focused on high-growth Stellar ecosystem projects with sustainable returns.
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#9CA3AF",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Total Value
      </Text>
      <Text
        style={
          {
            "color": "#6B7280",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        $1,234,567
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#9CA3AF",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Admins
      </Text>
      <Text
        style={
          {
            "color": "#6B7280",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        128
      </Text>
    </View>
  </View>
</View>
`;

exports[`PoolCard Snapshots renders loading state correctly 1`] = `
<View
  style={
    [
      {
        "overflow": "hidden",
        "position": "relative",
      },
      {
        "backgroundColor": "#F9FAFB",
        "borderColor": "#E5E7EB",
      },
      {
        "borderRadius": 12,
        "marginHorizontal": 16,
        "marginVertical": 8,
        "padding": 20,
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        [
          {
            "borderRadius": 9999,
          },
          {
            "backgroundColor": "#F3F4F6",
            "height": 18,
            "width": 150,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        [
          {
            "borderRadius": 9999,
          },
          {
            "backgroundColor": "#F3F4F6",
            "height": 20,
            "width": 64,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "borderRadius": 9999,
        },
        {
          "backgroundColor": "#F3F4F6",
          "height": 12,
          "width": "92%",
        },
        {
          "marginTop": 14,
        },
      ]
    }
  />
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 16,
        "marginTop": 18,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 9999,
            },
            {
              "backgroundColor": "#F3F4F6",
              "height": 10,
              "width": 78,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          [
            {
              "borderRadius": 9999,
            },
            {
              "backgroundColor": "#F3F4F6",
              "height": 14,
              "width": 100,
            },
            {
              "marginTop": 6,
            },
          ]
        }
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          [
            {
              "borderRadius": 9999,
            },
            {
              "backgroundColor": "#F3F4F6",
              "height": 10,
              "width": 72,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          [
            {
              "borderRadius": 9999,
            },
            {
              "backgroundColor": "#F3F4F6",
              "height": 14,
              "width": 56,
            },
            {
              "marginTop": 6,
            },
          ]
        }
      />
    </View>
  </View>
  <View
    pointerEvents="none"
    style={
      [
        {
          "backgroundColor": "transparent",
          "bottom": 0,
          "opacity": 0.18,
          "position": "absolute",
          "top": 0,
          "width": 120,
        },
        {
          "backgroundColor": "#F3F4F6",
          "transform": [
            {
              "translateX": -120,
            },
          ],
        },
      ]
    }
  />
</View>
`;

exports[`PoolCard Snapshots renders with long description correctly 1`] = `
<View
  accessibilityLabel="Pool Stellar Growth Pool with balance $1,234,567"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#F9FAFB",
      "borderColor": "#E5E7EB",
      "borderRadius": 12,
      "borderWidth": 1,
      "marginVertical": 4,
      "opacity": 1,
      "padding": 20,
    }
  }
  testID="pool-card-pool-456"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#111827",
          "flex": 1,
          "fontSize": 18,
          "fontWeight": "bold",
        }
      }
    >
      Stellar Growth Pool
    </Text>
    <Text
      style={
        {
          "borderRadius": 6,
          "color": "#10B981",
          "fontSize": 14,
          "fontWeight": "600",
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      12.5%
       APY
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#6B7280",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 16,
      }
    }
  >
    This is a comprehensive investment pool that focuses on emerging technologies within the Stellar ecosystem, including DeFi protocols, NFT marketplaces, and cross-border payment solutions. The pool is managed by experienced professionals with a proven track record.
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#9CA3AF",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Total Value
      </Text>
      <Text
        style={
          {
            "color": "#6B7280",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        $1,234,567
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#9CA3AF",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Admins
      </Text>
      <Text
        style={
          {
            "color": "#6B7280",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        128
      </Text>
    </View>
  </View>
</View>
`;

exports[`PoolCard Snapshots renders with onPress handler correctly 1`] = `
<View
  accessibilityLabel="Pool Stellar Growth Pool with balance $1,234,567"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#F9FAFB",
      "borderColor": "#E5E7EB",
      "borderRadius": 12,
      "borderWidth": 1,
      "marginVertical": 4,
      "opacity": 1,
      "padding": 20,
    }
  }
  testID="pool-card-pool-456"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#111827",
          "flex": 1,
          "fontSize": 18,
          "fontWeight": "bold",
        }
      }
    >
      Stellar Growth Pool
    </Text>
    <Text
      style={
        {
          "borderRadius": 6,
          "color": "#10B981",
          "fontSize": 14,
          "fontWeight": "600",
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      12.5%
       APY
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#6B7280",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 16,
      }
    }
  >
    A diversified pool focused on high-growth Stellar ecosystem projects with sustainable returns.
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#9CA3AF",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Total Value
      </Text>
      <Text
        style={
          {
            "color": "#6B7280",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        $1,234,567
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#9CA3AF",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Admins
      </Text>
      <Text
        style={
          {
            "color": "#6B7280",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        128
      </Text>
    </View>
  </View>
</View>
`;

exports[`PoolCard Snapshots renders with zero participants correctly 1`] = `
<View
  accessibilityLabel="Pool Stellar Growth Pool with balance $1,234,567"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#F9FAFB",
      "borderColor": "#E5E7EB",
      "borderRadius": 12,
      "borderWidth": 1,
      "marginVertical": 4,
      "opacity": 1,
      "padding": 20,
    }
  }
  testID="pool-card-pool-456"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#111827",
          "flex": 1,
          "fontSize": 18,
          "fontWeight": "bold",
        }
      }
    >
      Stellar Growth Pool
    </Text>
    <Text
      style={
        {
          "borderRadius": 6,
          "color": "#10B981",
          "fontSize": 14,
          "fontWeight": "600",
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      12.5%
       APY
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#6B7280",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 16,
      }
    }
  >
    A diversified pool focused on high-growth Stellar ecosystem projects with sustainable returns.
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#9CA3AF",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Total Value
      </Text>
      <Text
        style={
          {
            "color": "#6B7280",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        $1,234,567
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#9CA3AF",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Admins
      </Text>
      <Text
        style={
          {
            "color": "#6B7280",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        0
      </Text>
    </View>
  </View>
</View>
`;

exports[`PoolCard Snapshots renders without APY correctly 1`] = `
<View
  accessibilityLabel="Pool Stellar Growth Pool with balance $1,234,567"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#F9FAFB",
      "borderColor": "#E5E7EB",
      "borderRadius": 12,
      "borderWidth": 1,
      "marginVertical": 4,
      "opacity": 1,
      "padding": 20,
    }
  }
  testID="pool-card-pool-456"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#111827",
          "flex": 1,
          "fontSize": 18,
          "fontWeight": "bold",
        }
      }
    >
      Stellar Growth Pool
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#6B7280",
        "fontSize": 14,
        "lineHeight": 20,
        "marginBottom": 16,
      }
    }
  >
    A diversified pool focused on high-growth Stellar ecosystem projects with sustainable returns.
  </Text>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#9CA3AF",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Total Value
      </Text>
      <Text
        style={
          {
            "color": "#6B7280",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        $1,234,567
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#9CA3AF",
            "fontSize": 12,
            "marginBottom": 4,
          }
        }
      >
        Admins
      </Text>
      <Text
        style={
          {
            "color": "#6B7280",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        128
      </Text>
    </View>
  </View>
</View>
`;
